Add YOLOv8 info and make indicator for project's current state

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <div class="row">
             <div class="col-lg-8 mx-auto">
                 <div class="approach-card">
-                    <h4 class="mb-4"><i class="fas fa-target me-2"></i>Objective 1</h4>
+                    <h4 class="mb-4">
+                        <i class="fas fa-target me-2"></i>Objective 1
+                        <span class="badge bg-warning text-dark ms-2">In Progress</span>
+                    </h4>
                     <p class="mb-4">The first major milestone is training a model to classify shot types (smash, clear, drop, drive) based on short video clips.</p>
                 </div>
 
@@ -76,6 +79,7 @@
                         <li><i class="fas fa-robot me-2"></i>OpenPose/MediaPipe for pose estimation</li>
                         <li><i class="fas fa-camera me-2"></i>VideoBadminton Dataset</li>
                         <li><i class="fas fa-database me-2"></i>Custom data preprocessing pipeline</li>
+                        <li><i class="fas fa-code-branch me-2"></i>YOLOv8 for shuttlecock detection</li>
                     </ul>
                 </div>
             </div>
